Fix vertical scrollbar not appearing

--- a/src/StartPage.module.css
+++ b/src/StartPage.module.css
@@ -15,6 +15,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  overflow: auto;
 }
 
 .upper-content-container {
